no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -21,7 +21,7 @@ Todo:
 PURPOSE ==>                                     #Execute JavaScript code server-side
                                                 #Based on Chrome JavaScript engine V8
 
-VERSION ==>                                     #15.8.0 (current), 14.15.0 (active LTS), 12.19.0 (active LTS), 10.23.0 (maintenance)
+VERSION ==>                                     #15.11.0 (current), 14.15.0 (active LTS), 12.19.0 (active LTS), 10.23.0 (maintenance)
                                                 #Branches:
                                                 #  - "current": latest major version. New one every 0.5 years
                                                 #  - LTS: every even-numbered version
@@ -964,6 +964,7 @@ finished(STREAM[, OPTS], FUNC([ERROR]))         #Call FUNC([ERROR]) when STREAM 
                                                 #OPTS:
                                                 #  - readable|writable BOOL (def: guessed)
                                                 #  - error BOOL (def: true): use 'error' event
+                                        15.11.0*#  - signal ABORT_SIGNAL
 END-OF-STREAM(...)                             ##Ponyfill for finished() (1.4.4)
 ON-FINISHED(...)                               ##Similar but slightly different, i.e. not preferred (2.3.0)
 addAbortSignal(ABORT_SIGNAL, STREAM)     15.4.0*#Call STREAM.destroy() on ABORT_SIGNAL.abort()
