no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -81,6 +81,7 @@ process.nextTick(FUNC()[, ...])                 #Add a new microtask (see JavaSc
 new AbortController()                    15.0.0*#Like DOM
 new AbortSignal()                        15.0.0*#Like DOM. Child of EventTarget
                                          15.0.0*#Most OPTS.signal used in this doc throw|reject with AbortError
+AbortSignal.abort()->ABORT_SIGNAL       15.12.0*#Like DOM
 
 require('timers/promises')               15.0.0*#
 setTimeout(NUM[, VAL[, OPTS]])->PROMISE  15.0.0*#Resolves to VAL (def: undefined) after NUMms.
@@ -2980,6 +2981,10 @@ WORKER.on('error', FUNC(ERROR))                 #Uncaught exception within worke
 MESSAGEPORT|WORKER.[un]ref()                    #
 
 
+setEnvironmentData(KEY, VAL)            15.12.0*#Similar to process.env except:
+getEnvironmentData(KEY)->VAL            15.12.0*#  - can use any KEY|VAL type
+                                        15.12.0*#  - thread-specific (not process-specific)
+
 WORKER|MESSAGEPORT.postMessage                  #Like DOM except:
  (VAL[, VAL2_ARR])                              #  - child can only use MESSAGEPORT, not global "postMessage()"
                                                 #  - VAL2:
@@ -2992,8 +2997,10 @@ WORKER|MESSAGEPORT.on('message', FUNC(VAL))     #Like DOM except:
                                                 #  - MESSAGEPORT will keep process open until MESSAGEPORT.close|unref()
 WORKER|MESSAGEPORT.on
  ('messageerror', FUNC(ERROR))          12.19.0*#Like DOM
-WORKER.receiveMessageOnPort(MESSAGPORT)->VAL 12*#If there is a message VAL in the queue, return it and remove it from queue.
+WORKER.receiveMessageOnPort(ARG)->VAL        12*#If there is a message VAL in the queue, return it and remove it from queue.
                                              12*#Otherwise return undefined
+                                             12*#ARG is MESSAGEPORT
+                                        15.12.0*#or BROADCAST_CHANNEL
 WORKER.moveMessagePortToContext              11*#Transfer MESSAGEPORT to another global object COBJ (created by VM.createContext())
  (MESSAGEPORT, COBJ)->MESSAGEPORT2           11*#MESSAGEPORT will become unusable
                                              11*#'message' event listeners are kept
@@ -3284,7 +3291,7 @@ generateKeyPair[Sync]('TYPE', OPTS              #Create asym key pair, where SBU
 createPrivate|PublicKey(OPTS|SBUFFER)->KEY   11*#Create asym key pair. OPTS:
                                              11*#  - key SBUFFER or (for 'Public') KEY
                                              11*#  - format 'pem' (def) or 'der': of key
-                                         15.9.0*#    or 'jwk'
+                                        15.12.0*#    or 'jwk'
                                              11*#  - type 'pkcs1', 'spki' or (privateKey only) 'sec1': ignored if format 'pem'
                                              11*#  - passphrase SBUFFER (privateKey only)
                                          15.0.0*#SBUFFER can be STDABUFFER
@@ -3334,10 +3341,11 @@ VERIFY.verify                                   #Read from createVerify()
                                              12*#  - dsaEncoding
                                                 #STDBUFFER is the signature.
                                          15.0.0*#*BUFFER can be STDABUFFER
-sign(['ALGO, ']STDBUFFER2, SBUFFER|KEY|OPTS)
- ->BUFFER
+sign(['ALGO, ']STDBUFFER2, SBUFFER|KEY|OPTS
+ [, FUNC(ERROR, BUFFER)])->BUFFER
 verify(['ALGO, ']STDBUFFER2, SBUFFER|KEY|OPTS,
- STDBUFFER)->BUFFER                          12*#Shortcut for createSign|Verify()
+ STDBUFFER[, FUNC(ERROR, BOOL)])             12*#Shortcut for createSign|Verify()
+ ->BUFFER                              <15.12.0*#FUNC not available
 
 Certificate()                                   #Returns CERTIFICATE, used for SPKAC, used to send certificates client-side to
                                                 #the server with the HTML5 <keygen>.
