no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -622,6 +622,7 @@ import ... from 'URI'                        12*#Import from 'URI' not PATH
                                              12*#Can use #HASH or ?QUERY
                                              12*#  - included in cache key, providing imported file is ESM
                                              12*#  - i.e. can load twice a file by using different ?QUERY
+                                             12*#  - import('URI') uses the same cache and cache logic
                                              12*#Can use fileURLToPath|pathToFileURL() to convert
 
 --experimental-specifier-resolution=STR      12*#Whether:
