no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -9,7 +9,7 @@ ALTERNATIVES ==>                  #  - eslint (prefered): more rules, more confi
                                   #  - jscs: not maintained, merged with eslint
                                   #  - jshint
 
-VERSION ==>                       #7.26.0
+VERSION ==>                       #7.27.0
                                   #JavaScript linter, using Espree parser.
 
 TYPE                              #ESTree type
@@ -1799,7 +1799,7 @@ node/prefer-dns/fs               ##Use DNS.promises.* instead of DNS.*
                                              \=+===============================+=/
 
 
-import/*                         ##Node module "eslint-plugin-import" (2.23.2)
+import/*                         ##Node module "eslint-plugin-import" (2.23.3)
                                  ##Most seem to work for both require() and import|export,
                                  ##although mostly targeting import|export
                                  ##Uses the following CONF.settings:
@@ -2112,7 +2112,7 @@ no-restricted-imports             #Avoid import ... from 'MDL' using blacklisted
  ...STR_ARR|OBJ_ARR               #Can also be OBJ:
                                   #  - paths STRM_ARR: full path
                                   #     - can also usse STRM.importNames 'VAR'_ARR to disallow specific exported variables
-                                  #  - patterns STR_ARR: globbing patterns (including globstar) and !GLOB
+                                  #  - patterns STRM_ARR: globbing patterns (including globstar) and !GLOB
 no-restricted-exports [OBJ]       #Avoid export ... from 'MDL' using blacklisted OBJ.restrictedNamedExports STR_ARR
                                   #STR_ARR can include 'default'
 node/no-restricted-require        #Avoid require('CORE_MODULE') from blacklisted ones
