no commit message

--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -1968,38 +1968,41 @@ new Proxy(OBJ, OBJ2)                        -|||#Returns PROXY:
                                             -|||#     - there are some special rules ('invariants') to handle
                                             -|||#       non-extensible|configurable|writable properties (see online doc)
                                             -|||#       Should not worry unless writing a library.
+                                            -|||#     - return value:
+                                            -|||#        - mutating methods must return BOOL:
+                                            -|||#           - if falsy, throws TypeError
+                                            -|||#        - non-mutating methods must return the same return value as the underlying method
+                                            -|||#        - should return the corresponding Reflect.*(...) to get the original behavior
                                             -|||#OBJ2 members follow.
                                             -|||#Limited polyfill|ponyfill GoogleChrome 'proxy-polyfill'
 Proxy.revocable(OBJ, OBJ2)                  -|||#Like new Proxy(OBJ, OBJ2) but returns OBJ3:
                                             -|||#  - proxy PROXY
                                             -|||#  - revoke(): make accessing OBJ3.proxy throw a TypeError
 
-OBJ2.set(PROXY, 'VAR', VAL, OBJ3)           -|||#PROXY.VAR = VAL
-                                            -|||#  - OBJ3 === PROXY, unless PROXY is in prototype chain, in which case OBJ3
-                                            -|||#    is the target child
-                                            -|||#  - must return BOOL. If false, will throw TypeError.
-OBJ2.get(PROXY, 'VAR', OBJ3)                -|||#PROXY.VAR
-                                            -|||#  - OBJ3: see set(...)
-OBJ2.delete(PROXY, 'VAR')                   -|||#delete PROXY.VAR
+OBJ2.set(PROXY, 'VAR', VAL, OBJ3)->BOOL     -|||#PROXY.VAR = VAL
+                                            -|||#OBJ3 === PROXY, unless PROXY is in prototype chain, in which case OBJ3 is the target child
+OBJ2.get(PROXY, 'VAR', OBJ3)->VAL           -|||#PROXY.VAR
+                                            -|||#OBJ3: like set(...)
+OBJ2.deleteProperty(PROXY, 'VAR')->BOOL     -|||#delete PROXY.VAR
 
-OBJ2.has(PROXY, 'VAR')                      -|||#'VAR' in PROXY
+OBJ2.has(PROXY, 'VAR')->BOOL                -|||#'VAR' in PROXY
 OBJ2.ownKeys(PROXY)->STR_ARR                -|||#Object.getOwnPropertyNames(PROXY) + Object.getOwnPropertySymbols()
-                                            -|||#  - must at least contain same keys as original call
+                                            -|||#Must at least contain same keys as original call
 
-OBJ2.defineProperty(PROXY, 'VAR', OBJ3)     -|||#Object.defineProperty(PROXY, 'VAR', OBJ3)
-                                            -|||#  - must return BOOL. If false, will throw TypeError.
+OBJ2.defineProperty(PROXY, 'VAR', OBJ3)
+ ->BOOL                                     -|||#Object.defineProperty(PROXY, 'VAR', OBJ3)
 OBJ2.getOwnPropertyDescriptor(PROXY, 'VAR')
-  [->OBJ]                                   -|||#Object.getOwnPropertyDescriptor(PROXY, 'VAR')
+ [->OBJ]                                    -|||#Object.getOwnPropertyDescriptor(PROXY, 'VAR')
 OBJ2.isExtensible(PROXY)->BOOL              -|||#Object.isExtensible(PROXY)
-                                            -|||#  - must return same value
+                                            -|||#Must return same value
 OBJ2.preventExtensions(PROXY)->BOOL         -|||#Object.preventExtensions(PROXY)
-                                            -|||#  - must return Object.isExtensible(PROXY)
+                                            -|||#Must return Object.isExtensible(PROXY)
 
 OBJ2.getPrototypeOf(PROXY)->OBJ|null        -|||#PROXY.__proto__ or Object.getPrototypeOf(PROXY)
-                                            -|||#  - internally used by isPrototypeOf() and instanceof
-OBJ2.setPrototypeOf(PROXY, OBJ3)            -|||#PROXY.__proto__ = OBJ3 or Object.setPrototypeOf(PROXY, OBJ3)
+                                            -|||#Internally used by isPrototypeOf() and instanceof
+OBJ2.setPrototypeOf(PROXY, OBJ3)->BOOL      -|||#PROXY.__proto__ = OBJ3 or Object.setPrototypeOf(PROXY, OBJ3)
 
-OBJ2.apply(PROXY, THIS, ARGS_ARR)           -|||#PROXY(ARGS...)
+OBJ2.apply(PROXY, THIS, ARGS_ARR)->VAL      -|||#PROXY(ARGS...)
 OBJ2.construct(PROXY, ARGS_ARR)->OBJ        -|||#new PROXY(ARGS...)
 
 
