no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -21,7 +21,7 @@ Todo:
 PURPOSE ==>                                     #Execute JavaScript code server-side
                                                 #Based on Chrome JavaScript engine V8
 
-VERSION ==>                                     #16.2.0 (current), 15.14.0 (maintenance), 14.17.0 (active LTS), 12.22.1 (maintenance)
+VERSION ==>                                     #16.3.0 (current), 15.14.0 (maintenance), 14.17.0 (active LTS), 12.22.1 (maintenance)
                                                 #Branches:
                                                 #  - "current": latest major version. New one every 0.5 years
                                                 #  - LTS: every even-numbered version
@@ -882,7 +882,6 @@ OBJECT MODE ==>                                 #SVAL is any VAL (except null):
                                                 #  - highWaterMark is per-SVAL and defaults to 16
 
 ISTREAM ==>                                     #Input stream. Actually called Readable
-                                                #Is an ASYNC_ITERABLE
 new STREAM.Readable([OBJ])                      #OBJ:
                                                 #  - encoding 'ENCODING' (def: null, i.e. uses BUFFER)
                                                 #  - objectMode BOOL: see above
@@ -923,6 +922,10 @@ ISTREAM.unshift(SVAL[, 'ENCODING'])             #Put last SVAL read back in ISTR
 ISTREAM.destroy([ERROR])                        #
 ISTREAM.destroyed                               #BOOL
 
+ISTREAM ITERATION ==>                           #ISTREAM is an ASYNC_ITERABLE
+ISTREAM.iterator([OPTS])->ASYNC_ITERATOR        #OPTS:
+                                                #  - destroyOnReturn BOOL (def: true)
+                                                #  - destroyOnError BOOL (def: true)
 Readable.from(SVAL_ITERABLE[, OBJ])             #OBJ:
  ->ISTREAM                                      #  - same as new Readable(OBJ)
                                                 #  - def objectMode is true
@@ -2068,6 +2071,7 @@ userInfo([OBJ])->OBJ2                           #OBJ2:
                                                 #  - shell 'PATH' (null on Windows)
                                                 #Throws in Docker when `--user` points to user with no home nor username.
                                                 #OBJ: encoding 'utf8' (def) or 'buffer'
+devNull()->STR                           16.3.0*#Returns '/dev/null' on Linux|Mac and '\\.\nul' on Windows
 
 EOL                                             #OS-specific newline "\n" or "\r\n"
 
