no commit message

--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -1589,12 +1589,12 @@ DATAVIEW.buffer|byteLength|byteOffset           #Readonly
 
 DATAVIEW.get[Ui|I]nt8|16|32([UINT[, BOOL]])
 DATAVIEW.getFloat32|64(UINT[, BOOL])            #UINT is byte offset, BOOL endianness (def: true, i.e. little endian)
-DATAVIEW.getBig[Ui|I]nt64(UINT[, BOOL])  10.4*-|#
+DATAVIEW.getBig[Ui|I]nt64(UINT[, BOOL])       -|#
 DATAVIEW.set*(UINT, UINT2[, BOOL])              #UINT2 is the value to set
 
 
 TypedArray                                      #Base prototype of [Ui|I]nt8|16|32Array or Float32|64Array
-                                         10.4*-|#and Big[Ui|i]nt64Array
+                                              -|#and Big[Ui|i]nt64Array
                                                 #Each have a given associated type
                                                 #Not accessible globally but through prototype chain.
                                               -|#Mixes in all ARR methods, including static ones.
@@ -1836,9 +1836,6 @@ Math.random()                                   #Float in [0,1). Seeded from cur
 
 
 JSON ==>                                        #See JSON-js doc
-
-                                           10*-|#U+2028|2029 (line separators) allowed unescaped
-                                            12*-#Escaping of invalid UTF-8 (e.g. JSON.stringify('\udead'))
 
 
                                              /=+===============================+=\
