no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -471,9 +471,8 @@ FORMAT ==>                                      #Decided by:
 
 MIXING ==>                                      #ESM can import CommonJS:
                                                 #  - module.exports VAL|OBJ is imported as default import
-                                             14*#  - module.exports.VAR can also be imported as named import
-                                             14*#     - does not work if module.exports.VAR is dynamically set
-                                                #  - can use dynamic require() with createRequire()
+                                                #  - module.exports.VAR can also be imported as named import
+                                                #     - does not work if module.exports.VAR is dynamically set
                                                 #CommonJS cannot import ESM:
                                                 #  - including if ESM is a package (node_modules)
                                                 #  - but can use dynamic import(), which allows importing ESM
@@ -666,7 +665,7 @@ LOADER.dynamicInstantiate(URL)                  #Customize loading, for custom f
 
 PACKAGE.exports                                 #'URI'[_ARR]. Like PACKAGE.main except:
                                                 #  - priority over it
-                                                #  - start from Node 13, i.e. can be used to target Node that supports ESM
+                                                #  - start from Node 12.20.0, i.e. can be used to target Node that supports ESM
                                                 #  - must start with '.'
                                                 #  - only import|require from 'MODULE[/...]' not relative|absolute paths|URI
                                                 #  - can be an ARR for fallbacks
