no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -2145,7 +2145,7 @@ CROSS-OS PERMISSIONS ==>                        #Windows permissions are not sup
 
 PATH|FILENAME|DIR                               #Either:
                                                 #  - STR
-                                                #  - URI
+                                                #  - URI (file: scheme)
                                                 #  - BUFFER (less interoperable)
 f*                                              #Variant using file descriptior FD_INT
 l*                                              #Doesn't deference symlinks
