no commit message

--- a/Languages/Language_processing/Post_processing/JavaScript/babel.node_cli.txt
+++ b/Languages/Language_processing/Post_processing/JavaScript/babel.node_cli.txt
@@ -305,7 +305,7 @@ BABEL-CORE.transform
                                              \=+===============================+=/
 
 
-require("babel/register")[(CONF)] #Patch require() so it uses Babel on *.es6|es|jsx|js|cjs|mjs
+require("@babel/register")[(CONF)] #Patch require() so it uses Babel on *.es6|es|jsx|js|cjs|mjs
                                   #Should not be used in library, as it will patch require() for other libraries too.
                                   #CONF.ignore defaults to 'node_modules/**'
                                   #For dev purpose only
