--- a/Languages/Language_processing/Post_processing/JavaScript/babel.node_cli.txt
+++ b/Languages/Language_processing/Post_processing/JavaScript/babel.node_cli.txt
@@ -456,6 +456,7 @@ PRESET                            #Same syntax as PLUGIN, except 'plugin' is 'pr
                                   #  - forceAllTransforms BOOL (def: false): force using all transforms, regardless of "targets"
                                   #  - include|exclude PLUGIN_STR|REGEXP_ARR
                                   #  - modules 'amd|umd|systemjs|commonjs|cjs|auto'|false (def: 'auto'): use @babel/plugin-transform-*
+                                  #     - if false, do not transpile modules, e.g. preserve ES modules
                                   #  - spec BOOL (def: false): always use PLUGIN_OPT.spec
                                   #  - assumptions OBJ (def: {}): always use PLUGIN_OPT.assumptions OBJ
                                   #  - debug true: prints which plugins will be used
