no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -624,6 +624,7 @@ import ... from 'URI'                           #Import from 'URI' not PATH
                                                 #  - 'node': can omit file extension or use index.js
                                                 #  - 'explicit' (def): cannot (like in browsers)
                                                 #Both use same algorithm to find node_modules (unlike browsers)
+SELF IMPORT ==>                                 #Can import current package by name (e.g. in tests)
 
 import.meta.url                                 #Like __filename but as 'file:///URI'.
                                                 #Should be used instead of __filename|__dirname
