no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -1919,7 +1919,7 @@ domainToASCII(STR)->STR2
 domainToUnicode(STR)->STR2                      #IDN from|to Punycode
 
 fileURLToPath(URI|'URI')->'PATH'                #Conversion between file://* and 'PATH' considering:
-pathToFileURL('PATH')->URI                      #  - 'PATH' is OS-specific
+pathToFileURL('PATH')->URI                      #  - 'PATH' is OS-specific, e.g. Windows drive
                                                 #  - URI requires percent encoding, but not 'PATH'
 
 urlToHttpOptions(URI)->OBJ               15.7.0*#Returns OBJ to use with HTTP[S].request()
