no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -1501,6 +1501,8 @@ no-unsafe-optional-chaining [OBJ] #If OBJ2?.VAR, VAR might be undefined, i.e. do
                                   #  - an OBJ2 without ?. or ??
                                   #  - a NUM without ??, if OBJ.disallowArithmeticOperators true (def: false)
 
+unicorn/prefer-object-has-own    ##Prefer Object.hasOwn() over OBJ.hasOwnProperty()
+
 
                                              /=+===============================+=\
                                             /  :                               :  \
@@ -1537,6 +1539,7 @@ no-proto                          #Avoid __proto__ (prefer get|setPrototypeOf())
 no-prototype-builtins             #Avoid OBJ.METHOD(...) (for builtin OBJ methods)
                                   #Use {}.METHOD.call(OBJ, ...) instead
                                   #The reason: it works on OBJ created with Object.create(null)
+unicorn/prefer-prototype-methods ##Prefer Object|Array.prototype.METHOD.call|apply(...) over OBJ|ARR.METHOD.call|apply(...)
 
 no-extend-native [OBJ]            #Avoid extending native types
                                   #OBJ: exceptions 'TYPE'_ARR
@@ -1592,8 +1595,10 @@ unicorn/no-array-push-push [OBJ] ##Combine multiple ARR.push() calls into one
 
 no-array-constructor              #Avoids [new] Array(VAL,...)
                                   #[new] Array(NUM) is still allowed
-unicorn/no-new-array              #Same but also forbid [new] Array(NUM)
-unicorn/prefer-set-has            #Prefer SET.has() over ARR.includes()
+unicorn/no-new-array             ##Same but also forbid [new] Array(NUM)
+unicorn/prefer-set-has           ##Prefer SET.has() over ARR.includes()
+unicorn/
+ require-array-join-seperator    ##Require argument to ARR.join()
 
 
                                              /=+===============================+=\
@@ -1614,7 +1619,7 @@ no-useless-concat                 #Avoid STR_LIT + STR2_LIT
 prefer-template                   #Avoid STR + STR2, prefer `...`
 no-template-curly-in-string       #Avoid ${} inside "" or ''
 
-unicorn/*                        ##Module "eslint-plugin-unicorn" (33.0.0)
+unicorn/*                        ##Module "eslint-plugin-unicorn" (33.0.1)
 
 unicorn/
  prefer-string-starts-ends-with  ##Must use STR.startsWith|endsWith() when possible
@@ -1702,6 +1707,8 @@ prefer-number-properties [OBJ]    #Use 'Number.' in front of parseInt|parseFloat
                                  ##OBJ:
                                  ##  - checkInfinity BOOL (def: true)
 no-loss-of-precision              #Avoid very large integer, or very large fractional part, which are lost in DOUBLE float precision
+unicorn/require-number-to-fixed-
+ digits-argument                 ##Requires argument to NUM.toFixed()
 
 use-isnan [OBJ]                   #Must test NaN with [Number.]isNaN()
                                   #OBJ:
@@ -2296,3 +2303,4 @@ unicorn/prefer-dom-node-dataset  ##Prefer ELEM.dataset over ELEM.setAttribute()
 unicorn/prefer-modern-dom-apis   ##Prefer:
                                  ##  - NODE.replaceWith() over NODE.replaceChild()
                                  ##  - NODE.before() over NODE.insertBefore|AdjacentText|AdjacentElement()
+unicorn/no-document-cookie       ##Prefer cookieStore over document.cookie
