--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -689,6 +689,7 @@ Object.fromEntries(ITERABLE)                  -|#Inverse Object.entries(), i.e. 
 Object.getOwnPropertyNames(OBJ)                 #Returns own keys, including non-enumerable
 OBJ.propertyIsEnumerable('VAR')                 #Returns true if OBJ['VAR'] is in Object.keys()
 OBJ.hasOwnProperty('VAR')                       #Returns true if OBJ['VAR'] is in Object.getOwnPropertyNames()
+Object.hasOwn(OBJ, 'VAR')                    *-|#Same
 
 'VAR' in OBJ                                    #Returns true if OBJ['VAR'] is member, including shared or non-enumerable.
                                                 #Negation: !('VAR' in OBJ)
